Add env-based admin bootstrap on startup

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,6 @@ DATABASE_URL=postgresql://verifyhub:password@localhost:5432/verifyhub
 Jwt__Secret=replace-with-32-plus-char-secret
 Jwt__PluginSecret=replace-with-32-plus-char-secret
 VerifyHub__LicenseHmacSecret=replace-with-32-plus-char-secret
+ADMIN_EMAIL=admin@verifyhub.io
+ADMIN_PASSWORD=replace-with-strong-admin-password
+ADMIN_NAME=Platform Admin
