--- a/backend/VerifyHubPortal.csproj
+++ b/backend/VerifyHubPortal.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="..\plugins\email-plugin\EmailVerifyPlugin.cs" Link="Plugins\EmailVerifyPlugin.cs" />
+    <Compile Include="..\plugins\mobile-plugin\MobileQrPlugin.cs" Link="Plugins\MobileQrPlugin.cs" />
+  </ItemGroup>
 </Project>
